--- a/css/my_css.css
+++ b/css/my_css.css
@@ -98,6 +98,17 @@ margin-top: 15px;
   }
 
 /* multiple tones */
+.bg-nasa{
+    color: #fff;
+    background: -webkit-linear-gradient(-70deg, #fa7c30 30%, rgba(0, 0, 0, 0) 30%), url('https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg');
+    background: -o-linear-gradient(-70deg, #fa7c30 30%, rgba(0, 0, 0, 0) 30%), url('https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg');
+    background: -moz-linear-gradient(-70deg, #fa7c30 30%, rgba(0, 0, 0, 0) 30%), url('https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg');
+    background: linear-gradient(-70deg, #fa7c30 30%, rgba(0, 0, 0, 0) 30%), url('https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg');
+  background-size: cover;
+  background-position: 50% 21%;
+  text-align: right;
+	background-color:#fff;
+}
 .bg1 {
 	background: linear-gradient(-70deg, #3120E0 30%, #F0EABE 30%);
 	background-size: cover;
