--- a/css/my_css.css
+++ b/css/my_css.css
@@ -284,3 +284,12 @@ margin-top: 15px;
   -webkit-animation-direction: normal, alternate;
   animation-direction: normal, alternate;
 }
+.ss-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(230,230,230,0.4);
+  color: white;
+  text-align: center;
+}
