--- a/css/my_css.css
+++ b/css/my_css.css
@@ -41,8 +41,24 @@
   background-color: #5cb85c;
   color: white;
 }
-    
-    
+.ss-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(230,230,230,0.4);
+  color: black;
+  text-align: center;
+}    
+.ss-main-bg{
+  background: url(/icons/modern_reading_room.png);
+  /* Full height */
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+}
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
@@ -284,12 +300,4 @@ margin-top: 15px;
   -webkit-animation-direction: normal, alternate;
   animation-direction: normal, alternate;
 }
-.ss-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(230,230,230,0.4);
-  color: white;
-  text-align: center;
-}
+
